--- a/lang_finder/lang_finder.csproj
+++ b/lang_finder/lang_finder.csproj
@@ -49,12 +49,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CsvLoader.cs" />
     <Compile Include="Finder.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Finder.Designer.cs">
       <DependentUpon>Finder.cs</DependentUpon>
     </Compile>
+    <Compile Include="LangLine.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Finder.resx">
