--- a/lang_finder/lang_finder.csproj
+++ b/lang_finder/lang_finder.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Finder.Designer.cs">
       <DependentUpon>Finder.cs</DependentUpon>
     </Compile>
+    <Compile Include="LangDef.cs" />
     <Compile Include="LangLine.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
