--- a/lang_finder/lang_finder.csproj
+++ b/lang_finder/lang_finder.csproj
@@ -50,18 +50,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CsvLoader.cs" />
-    <Compile Include="Finder.cs">
+    <Compile Include="FinderForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Finder.Designer.cs">
-      <DependentUpon>Finder.cs</DependentUpon>
+    <Compile Include="FinderForm.Designer.cs">
+      <DependentUpon>FinderForm.cs</DependentUpon>
     </Compile>
     <Compile Include="LangDef.cs" />
     <Compile Include="LangLine.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Finder.resx">
-      <DependentUpon>Finder.cs</DependentUpon>
+    <EmbeddedResource Include="FinderForm.resx">
+      <DependentUpon>FinderForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -71,6 +71,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
