允许双击单元格进入编辑模式
可以部分选择并复制，暂不支持保存结果

--- a/lang_finder/App.config
+++ b/lang_finder/App.config
@@ -14,7 +14,7 @@
                 <value>False</value>
             </setting>
             <setting name="ignoreCase" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
         </lang_finder.Properties.Settings>
     </userSettings>
