新增自动行高功能

--- a/lang_finder/App.config
+++ b/lang_finder/App.config
@@ -16,6 +16,9 @@
             <setting name="ignoreCase" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="autoSizeRows" serializeAs="String">
+                <value>False</value>
+            </setting>
         </lang_finder.Properties.Settings>
     </userSettings>
 </configuration>
