--- a/lang_finder/Properties/Settings.settings
+++ b/lang_finder/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="ignoreCase" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="autoSizeRows" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
